syntax = "proto3";
package management;

message GetTypesRequest {}

message GetTypesResponse {
	repeated string type_names = 1;
}
